--- a/tests/src/dir.targets
+++ b/tests/src/dir.targets
@@ -184,6 +184,16 @@
 
   </Target>
 
+  <Target Name="WriteTofLine" Inputs="$(MSBuildProjectFullPath)" Outputs="$(IntermediateOutputPath)tofline.txt">
+
+     <!-- Write any information for this project to put in the uber-tof file -->
+<Warning Text="Writing line to $(IntermediateOutputPath)tofline.txt" />
+     <MakeDir Directories="$(IntermediateOutputPath)" />
+     <WriteLinesToFile File="$(IntermediateOutputPath)tofline.txt"
+                       Overwrite="true"
+                       Lines="Line from $(MSBuildProjectName) here" />
+  </Target>
+
   <Target Name="AfterBuild">
      <Copy SourceFiles="$(AssemblyName).reflect.xml"
            DestinationFolder="$(OutputPath)"
